# FastWrap

./: .example.env  .gitignore  Dockerfile  FLOWCHART.md  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  wizard.py
.github/workflows/: tests.yml
API-wrapper/: pyproject.toml
app/agents/: chatbot_agent.py  tools.py
app/api/: admin_routes.py  routes.py
app/auth/: client_service.py  dependencies.py
app/characters/: repository.py  service.py
app/chat/: memory.py  service.py
app/clients/: CRUD.py  character_service.py  chat_cache_service.py  chat_service.py  client_service.py  database_creation.py  db_character.py  repository.py  service.py
app/database/: init.py  schema.sql
app/infrastructure/: middleware.py  redis_client.py
app/models/: schemas.py
app/vectors/: embeddings.py  repository.py  service.py
documents/: FLOWCHART.md  TECH_DEBT.md
tests/: 1-character_test.py  2-chat_vector_memory_test.py  3-middleware_test.py  4-test_vector_chat_wiring.py  5-vector_test.py  6-client_test.py  7-admin_test.py  MockUser.py  basic_tests.py  character_test.py  chat_vector_memory_test.py  client_test.py  conftest.py  middleware_test.py  vector_test.py
