[project]
name = "api-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "langchain>=1.0.7",
    "langchain-openai>=1.1.0",
    "pydantic-settings>=2.12.0",
    "redis>=7.0.1",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
