[project]
name = "api-wrapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.121.1",
    "langchain>=1.0.7",
    "langchain-openai>=1.1.0",
    "numpy>=2.0.0",
    "pgvector>=0.4.2",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-ordering>=0.6",
    "redis>=7.0.1",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "."
